# RustNetease-RN

./: .gitignore  Cargo.toml  cookie
src/: api.rs  downloader.rs  main.rs  ui.rs
src/model/: login.rs  mod.rs  playlist.rs  user.rs
src/player/: mod.rs
src/util/: http.rs  mod.rs
