[package]
name = "RustNetease-RN"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking", "cookies", "gzip", "socks"] }
tokio = { version = "1.19.2", features = ["full"]}
serde_json = "1.0.81"
openssl = "0.10.40"
chrono = "0.4.19"
base64 = "0.11.0"
hex = "0.4.0"
serde = "1.0.137"
serde_urlencoded = "0.7.1"
rand = "0.8.5"
num-bigint = "0.4.3"
qrcode-generator = "4.1.6"
image = "0.24.2"
lazy_static = "1.4.0"
rodio = "0.15.0"
tui = "0.18.0"
crossterm = "0.23.2"